# gain-automation-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  cmake_linux.yml  cmake_macos.yml
resource/: Info.plist  big_knob.knob  gainautomatoreditor.uidesc
source/: gain_automator_cids.h  gain_automator_controller.cpp  gain_automator_entry.cpp  gain_automator_processor.cpp  gainautomatorcids.h  gainautomatorcontroller.cpp  gainautomatorcontroller.h  gainautomatorentry.cpp  gainautomatorparamids.h  gainautomatorprocessor.cpp  gainautomatorprocessor.h  paramramp.cpp  paramramp.h  paramvaluequeueprocessor.cpp  paramvaluequeueprocessor.h  version.h
